force-app/main/default/objects/Contact/fields/Accountant_Client_Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Client_Invitation_Link__c</fullName>
    <description>Personalized referral links for accountants</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accountant Client Invitation Link</label>
    <type>Url</type>
</CustomField>