force-app/main/default/objects/Contact/fields/Accountant_gusto_payroll_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Accountant_gusto_payroll_completion_date__c</fullName>
    <description>Date on which Status of Gusto Payroll Enrollment associated with a given Contact or Lead switched to &quot;Assesment-Completed&quot; or &quot;Passed&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gusto Payroll Cert Completion Date</label>
    <type>Date</type>
</CustomField>