force-app/main/default/objects/Contact/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>BatchId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>