force-app/main/default/objects/Contact/fields/Big_Desk_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Big_Desk_Sandbox__c</fullName>
    <description>Acccount Big Desk Sandbox Flag</description>
    <formula>Account.Big_Desk_Sandbox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Big Desk Sandbox</label>
    <type>Checkbox</type>
</CustomField>