force-app/main/default/objects/Contact/fields/Broker_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Broker Contact ID</inlineHelpText>
    <label>Broker Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>