force-app/main/default/objects/Contact/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by NBA to query opportunities that has contacts with a particular campaign</description>
    <inlineHelpText>Used by NBA to query opportunities that has contacts with a particular campaign</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>