force-app/main/default/objects/Contact/fields/Cashout_Disqualification_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Disqualification_Reasons__c</fullName>
    <description>(mapped from ZP User field Disqualification Reasons)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cashout User Disqualification Reasons</label>
    <type>TextArea</type>
</CustomField>