force-app/main/default/objects/Contact/fields/Cashout_Enrolled_at__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Enrolled_at__c</fullName>
    <description>The date on which the employee first enrolls with cashout (mapped from ZP User field Enrolled_at)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cashout User Enrolled Date</label>
    <type>Date</type>
</CustomField>