force-app/main/default/objects/Contact/fields/Concierge_Account__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concierge Account</label>
    <type>Checkbox</type>
</CustomField>