force-app/main/default/objects/Contact/fields/Contact_Responsibilities_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Responsibilities_Notes__c</fullName>
    <description>GEP field to capture the additional details about the role that the contact plays</description>
    <label>Contact Responsibilities Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>