force-app/main/default/objects/Contact/fields/Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Number__c</fullName>
    <description>Outreach: Number of the sequence Step the lead/contact is currently in</description>
    <label>Current Sequence Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>