force-app/main/default/objects/Contact/fields/Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Type__c</fullName>
    <description>Outreach: Indicates the step type such as an Auto Email, Manual Email, or Call Task</description>
    <label>Current Sequence Step Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>