force-app/main/default/objects/Contact/fields/DNC_Validated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>DNC_Validated_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNC Validated Date Time</label>
    <type>DateTime</type>
</CustomField>