force-app/main/default/objects/Contact/fields/Do_Not_Sell_Share_Date__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sell_Share_Date__c</fullName>
    <description>Do Not Sell/Share Date field used by OneTrust system. This field is updated by Mulesoft.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do Not Sell/Share Date field used by OneTrust system. This field is updated by Mulesoft.</inlineHelpText>
    <label>Do Not Sell/Share Date</label>
    <type>Date</type>
</CustomField>