force-app/main/default/objects/Contact/fields/External_Accountant_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Accountant_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Accountant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>