force-app/main/default/objects/Contact/fields/Held_out_of_Upsell_Communications__c.field-meta.xml
<CustomField>
    <fullName>Held_out_of_Upsell_Communications__c</fullName>
    <label>Held out of Upsell Communications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Held Out</fullName>
            </value>
            <value>
                <fullName>Exposed</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>