force-app/main/default/objects/Contact/fields/Is_UX_Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_UX_Active_Formula__c</fullName>
    <formula>If(ISBLANK(ZP_User_Role__c),false,if(OR(INCLUDES(ZP_User_Role__c, &apos;Contractor&apos;),INCLUDES(ZP_User_Role__c, &apos;Employee&apos;)),Is_UX_Active__c,true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is UR Active Formula</label>
    <type>Checkbox</type>
</CustomField>