force-app/main/default/objects/Contact/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Landing Page</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>