force-app/main/default/objects/Contact/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>GEP field to track the last activity from this specific contact</description>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>