force-app/main/default/objects/Contact/fields/Last_Contact_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Activity__c</fullName>
    <description>Indicates the last time a Contact was reached out to as either a connect or attempted connect via call or event</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates the last time a Contact was reached out to as either a connect or attempted connect via call or event</inlineHelpText>
    <label>Last Contact Activity</label>
    <type>Date</type>
</CustomField>