force-app/main/default/objects/Contact/fields/Last_Contact_Connect__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Connect__c</fullName>
    <description>Indicates the last time a Contact was successfully connected with through either a call or event</description>
    <inlineHelpText>Indicates the last time a Contact was successfully connected with through either a call or event</inlineHelpText>
    <label>Last Contact Connect</label>
    <type>Date</type>
</CustomField>