force-app/main/default/objects/Contact/fields/Last_Form_Fill_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Fill_URL__c</fullName>
    <label>Last Form Fill URL</label>
    <type>Url</type>
</CustomField>