force-app/main/default/objects/Contact/fields/Lead_Creation_Offer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Creation Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>