force-app/main/default/objects/Contact/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mapped from converted Lead. If blank, did not convert from a lead.</inlineHelpText>
    <label>Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>