force-app/main/default/objects/Contact/fields/LTV_Score__c.field-meta.xml
<CustomField>
    <fullName>LTV_Score__c</fullName>
    <label>LTV Score</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>