force-app/main/default/objects/Contact/fields/LU_Number_Certification_Not_Started__c.field-meta.xml
<CustomField>
    <fullName>LU_Number_Certification_Not_Started__c</fullName>
    <description>Number of certified courses not started by user on Learn Upon.</description>
    <label>LU Number Certification Not Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>