force-app/main/default/objects/Contact/fields/mk_PR_behavior_signals__c.field-meta.xml
<CustomField>
    <fullName>mk_PR_behavior_signals__c</fullName>
    <label>PR Behavior Signals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>