force-app/main/default/objects/Contact/fields/mk_PR_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>mk_PR_Fit_Score__c</fullName>
    <label>PR Fit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>