force-app/main/default/objects/Contact/fields/mkto71_Original_Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Search_Engine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mkto Original Search Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>