force-app/main/default/objects/Contact/fields/Mkto_BA_Email__c.field-meta.xml
<CustomField>
    <fullName>Mkto_BA_Email__c</fullName>
    <formula>Account.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkto BA Email</label>
    <type>Text</type>
</CustomField>