force-app/main/default/objects/Contact/fields/Name_of_Currently_Active_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Currently_Active_Sequence__c</fullName>
    <description>Outreach: Name of the sequence the Lead/Contact is currently in</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Currently Active Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>