force-app/main/default/objects/Contact/fields/Normalized_Alternate_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Alternate_Email_Domain__c</fullName>
    <description>Contains the normalized domain value of the alternate email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Normalized Alternate Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>