force-app/main/default/objects/Contact/fields/Normalized_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Mobile_Phone__c</fullName>
    <externalId>true</externalId>
    <label>Normalized Mobile Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>