force-app/main/default/objects/Contact/fields/Normalized_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Other_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Normalized Other Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>