force-app/main/default/objects/Contact/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>Owner.UserRole.DeveloperName</formula>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>