force-app/main/default/objects/Contact/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>