force-app/main/default/objects/Contact/fields/Promo_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Eligible_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promo Eligible Date</label>
    <type>Date</type>
</CustomField>