force-app/main/default/objects/Contact/fields/Promo_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Paid_Date__c</fullName>
    <label>Promo Paid Date</label>
    <type>Date</type>
</CustomField>