force-app/main/default/objects/Contact/fields/Recent_Content__c.field-meta.xml
<CustomField>
    <fullName>Recent_Content__c</fullName>
    <description>Used to update Recent Content on Campaign Member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recent Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>