force-app/main/default/objects/Contact/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>