force-app/main/default/objects/Contact/fields/Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Referral_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>