force-app/main/default/objects/Contact/fields/Related_Concierge_Acccounts__c.field-meta.xml
<CustomField>
    <fullName>Related_Concierge_Acccounts__c</fullName>
    <label>Related Concierge Acccounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>