force-app/main/default/objects/Contact/fields/Reseller_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Reseller Contact ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>