force-app/main/default/objects/Contact/fields/Residence_State__c.field-meta.xml
<CustomField>
    <fullName>Residence_State__c</fullName>
    <label>Residence State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>