force-app/main/default/objects/Contact/fields/Salesloft_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Cadence__c</fullName>
    <label>Salesloft Cadence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>