force-app/main/default/objects/Contact/fields/Salesloft_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to exclude leads from receiving sales specific communication via marketo and outreach.</description>
    <inlineHelpText>This field is used to exclude leads from receiving sales specific communication via marketo and outreach.</inlineHelpText>
    <label>Email Opt Out - Outreach</label>
    <type>Checkbox</type>
</CustomField>