force-app/main/default/objects/Contact/fields/SL_Customers_Reward_Eligible__c.field-meta.xml
<CustomField>
    <fullName>SL_Customers_Reward_Eligible__c</fullName>
    <label>Customers Reward Eligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>