force-app/main/default/objects/Contact/fields/SL_Joined_Date_Panda__c.field-meta.xml
<CustomField>
    <fullName>SL_Joined_Date_Panda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Joined Date Panda</label>
    <type>Date</type>
</CustomField>