force-app/main/default/objects/Contact/fields/SL_Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>SL_Partner_Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>