force-app/main/default/objects/Contact/fields/Stop_Nurture__c.field-meta.xml
<CustomField>
    <fullName>Stop_Nurture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark “true” if you wish to remove a lead from a particular nurture</inlineHelpText>
    <label>Stop Nurture</label>
    <type>Checkbox</type>
</CustomField>