force-app/main/default/objects/Contact/fields/Subscription_Center_Feature_Announce__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Center_Feature_Announce__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck if lead asks to no longer receive feature announcements</inlineHelpText>
    <label>Subscription Center - New Features</label>
    <type>Checkbox</type>
</CustomField>