force-app/main/default/objects/Contact/fields/Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Term Date</label>
    <type>Date</type>
</CustomField>