force-app/main/default/objects/Contact/fields/Unique_Email_Address_Contact__c.field-meta.xml
<CustomField>
    <fullName>Unique_Email_Address_Contact__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Api</inlineHelpText>
    <label>Unique Email Address - Contact</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>