force-app/main/default/objects/Contact/fields/UR_Recent_Project_Completion_date__c.field-meta.xml
<CustomField>
    <fullName>UR_Recent_Project_Completion_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UR Recent Project Completion date</label>
    <type>Date</type>
</CustomField>