force-app/main/default/objects/Contact/fields/URL_of_Conversion__c.field-meta.xml
<CustomField>
    <fullName>URL_of_Conversion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL of Conversion</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>