force-app/main/default/objects/Contact/fields/User_Referral_Reward__c.field-meta.xml
<CustomField>
    <fullName>User_Referral_Reward__c</fullName>
    <description>passed from referral table, represents the incentive given to referring users</description>
    <label>User Referral Reward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>