force-app/main/default/objects/Contact/fields/UTM_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign_Name__c</fullName>
    <description>Created for tracking UTM info from ChiliPiper.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>