force-app/main/default/objects/Contact/fields/UXResearch_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>UXResearch_Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact blacklisted for UX Research project</inlineHelpText>
    <label>UXResearch Blocklist</label>
    <type>Checkbox</type>
</CustomField>