force-app/main/default/objects/Contact/fields/UXResearch_Email_Code__c.field-meta.xml
<CustomField>
    <fullName>UXResearch_Email_Code__c</fullName>
    <label>UXResearch Email Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>