force-app/main/default/objects/Contact/fields/UXResearch_Exclude_Domain__c.field-meta.xml
<CustomField>
    <fullName>UXResearch_Exclude_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UXResearch Exclude Domain</label>
    <type>Checkbox</type>
</CustomField>