force-app/main/default/objects/Contact/fields/ZP_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZP_Phone__c</fullName>
    <externalId>true</externalId>
    <label>ZP Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>