force-app/main/default/objects/Contact/fields/ZP_User_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ZP User Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>