force-app/main/default/objects/Contact/fields/ZP_User_Role_Text__c.field-meta.xml
<CustomField>
    <fullName>ZP_User_Role_Text__c</fullName>
    <externalId>true</externalId>
    <label>ZP User Role Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>