force-app/main/default/objects/Contact/recordTypes/Embedded_Company.recordType-meta.xml
<RecordType>
    <fullName>Embedded_Company</fullName>
    <active>true</active>
    <label>Embedded Company</label>
</RecordType>