force-app/main/default/objects/Contact/validationRules/Contact_name_cannot_be_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_name_cannot_be_NA</fullName>
    <active>true</active>
    <errorConditionFormula>FirstName = &quot;NA&quot; &amp;&amp;
NOT (ISNEW())&amp;&amp;
PRIORVALUE(FirstName) != &quot;NA&quot; &amp;&amp;
NOT(ISBLANK(PRIORVALUE(FirstName)))</errorConditionFormula>
    <errorMessage>Contact name cannot be moved to NA</errorMessage>
</ValidationRule>